// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - File Card renders correctly 1`] = `
<jest>
  <div
    class="rounded-0 rounded-top p-4 border-bottom-0 card"
  >
    <div
      class="row"
    >
      <div
        class="col-4 order-2"
      >
        <img
          alt="alt img"
          class="card-img-top"
          src="https://picsum.photos/seed/1002/600/400"
        />
      </div>
      <div
        class="col-8"
      >
        <div
          class="card-body p-0"
        >
          <div
            class="mb-3"
          >
            <span
              class="me-2 badge bg-primary"
            >
              Label
            </span>
            <span
              class="badge bg-primary"
            >
              Label
            </span>
          </div>
          <h5
            class="card-title"
          >
            Title card
          </h5>
          <p
            class="card-text mb-2"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
          </p>
          <span
            class="text-muted me-3 text-nowrap"
          >
            Resource type
          </span>
          <span
            class="text-muted me-3 text-nowrap"
          >
            17 October 2019
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-start border-end border-top rounded-bottom"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-flex"
      >
        <div
          class="w-100 d-md-flex"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-bold m-0"
            >
              
            English
            
              <span
                class="fw-normal"
              >
                
              (16.2 MB PDF)
            
              </span>
            </small>
          </div>
          <a
            class="text-underline-hover align-self-center d-inline-block mt-1 mt-md-0"
            download="/example.html"
            href="#"
          >
            Download
            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#download"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="bg-light py-3 px-4 border-top"
    >
      <div
        class="text-center"
      >
        <a
          aria-controls="language-dropdown"
          aria-expanded="false"
          class="text-underline-hover"
          data-bs-toggle="collapse"
          href="#language-dropdown"
          role="button"
        >
          Other languages (3)
          <svg
            class="ms-2-5 bi icon--2xs"
          >
            <use
              xlink:href="#caret-down-fill"
            />
          </svg>
        </a>
      </div>
      <div
        class="collapse"
        id="language-dropdown"
      >
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-10"
            >
              <p
                class="fw-bold m-0"
              >
                File title FR
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est.
              </p>
              <small
                class="fw-bold"
              >
                Français 
                <span
                  class="fw-normal"
                >
                  (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-2 align-self-end"
            >
              <a
                class="d-block text-underline-hover mt-1"
                download="/example.html"
                href="#"
              >
                Download
                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-10"
            >
              <p
                class="fw-bold m-0"
              >
                File title ES
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est.
              </p>
              <small
                class="fw-bold"
              >
                Español 
                <span
                  class="fw-normal"
                >
                  (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-2 align-self-end"
            >
              <a
                class="d-block text-underline-hover mt-1"
                download="/example.html"
                href="#"
              >
                Download
                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <div
            class="row"
          >
            <div
              class="col-10"
            >
              <p
                class="fw-bold m-0"
              >
                File title BG
              </p>
              <p
                class="m-0"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est.
              </p>
              <small
                class="fw-bold"
              >
                български 
                <span
                  class="fw-normal"
                >
                  (16.2 MB - PDF)
                </span>
              </small>
            </div>
            <div
              class="col-2 align-self-end"
            >
              <a
                class="d-block text-underline-hover mt-1"
                download="/example.html"
                href="#"
              >
                Download
                <svg
                  class="ms-2-5 bi icon--fluid"
                >
                  <use
                    xlink:href="#download"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
        <div
          class="pt-3"
        >
          <p
            class="mb-2 d-inline-block me-2"
          >
            Looking for another language which is not on the list? 
          </p>
          <a
            class="text-underline-hover"
            href="/example.html"
          >
            Find out why.
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File renders correctly 1`] = `
<jest>
  <div
    class="border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-flex"
      >
        <svg
          class="mt-1 text-secondary bi icon--xl"
        >
          <use
            xlink:href="#file-pdf-fill"
          />
        </svg>
        <div
          class="w-100 ms-2-5 d-md-flex"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-bold m-0"
            >
              File title
            </p>
            <small
              class="fw-bold m-0"
            >
              
            English
            
              <span
                class="fw-normal"
              >
                
              (16.2 MB PDF)
            
              </span>
            </small>
          </div>
          <a
            class="text-underline-hover align-self-center d-inline-block mt-1 mt-md-0"
            download="/example.html"
            href="#"
          >
            Download
            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#download"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="bg-light py-3 px-4 border-top"
    >
      <div
        class="text-center"
      >
        <a
          aria-controls="language-dropdown"
          aria-expanded="false"
          class="text-underline-hover"
          data-bs-toggle="collapse"
          href="#language-dropdown"
          role="button"
        >
          Other languages (3)
          <svg
            class="ms-2-5 bi icon--2xs"
          >
            <use
              xlink:href="#caret-down-fill"
            />
          </svg>
        </a>
      </div>
      <div
        class="collapse"
        id="language-dropdown"
      >
        <div
          class="py-3 border-bottom"
        >
          <small
            class="fw-bold"
          >
            български 
            <span
              class="fw-normal"
            >
              (16.2 MB - PDF)
            </span>
          </small>
          <a
            class="d-block text-underline-hover mt-1"
            download="/example.html"
            href="#"
          >
            Download
            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#download"
              />
            </svg>
          </a>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <small
            class="fw-bold"
          >
            Español 
            <span
              class="fw-normal"
            >
              (16.2 MB - PDF)
            </span>
          </small>
          <a
            class="d-block text-underline-hover mt-1"
            download="/example.html"
            href="#"
          >
            Download
            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#download"
              />
            </svg>
          </a>
        </div>
        <div
          class="py-3 border-bottom"
        >
          <small
            class="fw-bold"
          >
            Français 
            <span
              class="fw-normal"
            >
              (16.2 MB - PDF)
            </span>
          </small>
          <a
            class="d-block text-underline-hover mt-1"
            download="/example.html"
            href="#"
          >
            Download
            <svg
              class="ms-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#download"
              />
            </svg>
          </a>
        </div>
        <div
          class="pt-3"
        >
          <p
            class="mb-2"
          >
            Looking for another language which is not on the list? 
          </p>
          <a
            class="d-block text-underline-hover"
            href="/example.html"
          >
            Find out why.
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;
